--- a/index.html
+++ b/index.html
@@ -1,90 +1,190 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>TB Corporation</title>
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!--<link href="css/bootstrap.css" rmel="stylesheet">  -->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/swiper.css">
+
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-      </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
-      </div>
+
+
+
+<!--navbar-inverseで黒色のナビゲーションへ-->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+
+   <!--ウィンドウ幅に合わせて可変-->
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+
+      <!--スマホ用トグルボタンの設置-->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
-  </header>
-  <div class="top-wrapper">
+
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+      <div class="row">
+        <!--ロゴ表示の指定-->
+        <a class="navbar-brand" href="#">TB Corporation</a>
+
+        <!--スマホ用の画面幅が小さいときの表示を非表示にする-->
+        <div id="navbar" class="navbar-collapse collapse">
+
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#home">会社概要</a></li>
+            <li><a href="#works">事業内容</a></li>
+            <!-- <li><a href="#skill">Skills</a></li>
+            <li><a href="#read">Read Books</a></li>  -->
+          </ul>
+        </div>
       </div>
-    </div>
+    </div><!--/.nav-collapse -->
+  </div><!--/.container-fluid -->
+</nav>
+
+<!--top-image-->
+<div class="top-image">
+<div class="container">
+<div class="row">
+<div class="col-sm-8">
+  <em>
+  <h1 id="title">TB Corporation</h1>
+  </em>
+</div>
+</div>
+</div>
+</div>
+
+<div class="container">
+  <div calss="col-sm-12">
+    <h1><b>会社概要</b></h1>
+    <div id="home"></div>
+   </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+        <div class="row">
+          <hr>
+          <h3><b>名称</b></h3>
+          <h3>株式会社TBコーポレーション</h3>
+        </div>
+        <div class="row">
+          <hr>
+          <h3><b>本社</b></h3>
+          <h3>東京都渋谷区本町三丁目5番13-702号 </h3>
+        </div>
+    </div> <!-- class="col-sm-12"　-->
+  </div> <!-- class="row"　-->
+</div> <!-- class="container"　-->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+  <div calss="col-sm-12">
+    <h1 id><b>事業内容</b></h1>
+    <div id="works"></div>
   </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+        <div class="row">
+          <hr>
+          <h3><b>コンサルティング</b></h3>
+          <h3>・飲食店の企画及び運営</h3>
+          <h3>・屋内空間、インテリアの企画、設計、デザイン</h3>
+          <h3>・広告宣伝</h3>
+          <h3>・販売促進</h3>
         </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
+    </div> <!-- class="col-sm-12"　-->
+  </div> <!-- class="row"　-->
+</div> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+  <div calss="col-sm-12">
+    <h1><b>お問合せ</b></h1>
+    <div id="works"></div>
   </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+        <div class="row">
+          <hr>
+          <h3><b>メールアドレス</b></h3>
+          <h3>tb.corp.yu@gmail.com</h3>
+        </div>
+    </div> <!-- class="col-sm-12"　-->
+  </div> <!-- class="row"　-->
+</div> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <p id="page-top"><a href="#">PAGE TOP</a></p>
+    </div> 
+  </div> 
+</div> 
+
+<!--footer-->
+<div class="footer">
+<div class="container">
+<div class="row">
+
+<div class="row copyarea text-center">
+  <div class="col-sm-12">
+    <!-- <p class="copy">Copyright &copy; TB Corporation</p> -->
   </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
-  </footer>
+</div>
+
+</div>
+</div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.js"></script>
+<script src="js/main.js"></script>
+
 </body>
 </html>
