--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
     <div class="col-sm-12">
         <div class="row">
           <hr>
-          <h3><b>メールアドレス</b></h3>
-          <h3>tb.corp.yu@gmail.com</h3>
+          <h3><b>TEL:   03-6804-3175</b></h3>
+          <h3><b>Email: tb.corp.yu@gmail.com</b></h3>
         </div>
     </div> <!-- class="col-sm-12"　-->
   </div> <!-- class="row"　-->
@@ -165,20 +165,6 @@
   </div> 
 </div> 
 
-<!--footer-->
-<div class="footer">
-<div class="container">
-<div class="row">
-
-<div class="row copyarea text-center">
-  <div class="col-sm-12">
-    <!-- <p class="copy">Copyright &copy; TB Corporation</p> -->
-  </div>
-</div>
-
-</div>
-</div>
-</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
